<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/capture"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/apptittle"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/app_tittle"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/red"
            android:textSize="35sp" />

        <EditText
            android:id="@+id/usermail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="@color/lightblue" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/userpass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/lightblue" >
            
         </EditText>
         	
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingTop="10dp" >

            <Button
                android:id="@+id/connectbtn"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:background="@drawable/btngradient"
                android:text="@string/connect"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/or"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/or"
                android:textColor="@color/dark_blue"
                android:textSize="20sp" />

            <Button
                android:id="@+id/signinbtn"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:background="@drawable/btngradient"
                android:text="@string/signin"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="15sp"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:id="@+id/resetpassord"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingTop="30dp"
            android:text="@string/resetpassword"
            android:textColor="@color/dark_blue" />
        
    </LinearLayout>
    
</RelativeLayout>
